themes/finna2/less/finna/myresearch.less
/* ... */
.sort-col.sort-col-mobile {
    @media(min-width: @screen-sm) {
    display: none;
  }
}

.toolbar .list-functions .sort-col {
    @media(max-width: @screen-sm) {
      display: none;
    }
  }

.online-payment-form > .payment-row {
  .online-payment-area {
    display: inline-block;
    .online-payment-form {
      display: inline-block;
      input {
        font-weight: bold;
      }
    }
    margin-bottom: 15px;
  }
  @media (min-width: @screen-sm) {
    > img {
      position: relative;
      bottom: 100px;
      float: right;
    }
  }
  @media (max-width: @screen-sm-min) {
    position: -webkit-sticky;
    position: sticky;
    top: 64px;
    background-color: white;
    width: 100%;
    padding: 12px 0px;
    input[type=submit] {
      margin-top: 10px;
    }
    > img {
      width: 15%;
      min-width: 40px;
      max-width: 60px;
      margin-top: 10px;
    }
  }
}

.myresearch-table.online-payment {
  .checkbox-col {
    width: initial;
  }
  .toolbar {
    border: 0;
    padding-bottom: 0;
    padding-left: 4px;
  }
}

.fines-info-area {
  margin-bottom: 15px;
  div.card-holder {
    display: flex;
    align-items: center;
    font-weight: bold;
  }
  .amount {
    font-weight: bold;
  }
  .online-payment-info {
    display: flex;
    align-items: baseline;
  }
  #online_payment_minimum_payment {
    margin: 0 0 0 1em;
    padding: 6px;
  }
  .last-transaction-information {
    &:extend(.alert);

    background: @gray-ultralight;
    border: 1px solid @gray-lighter;
    display: flex;
    align-items: center;
    div {
      flex: 1 1;
    }
  }
}

.toolbar-sticky-container {
  margin: 0;
  @media (max-width: @screen-md) {
    .row();
    padding: 0px 15px;
  }
  .toolbar-sticky {
    position: sticky;
    top: 0;
    z-index: 1;
    background-color: @body-bg;
    &.isSticky {
      margin: 0px -15px;
      padding: 0px 15px;
      @media (max-width: @screen-md) {
        top: @navbar-height;
      }
      @media (max-width: @screen-sm) {
        box-shadow: 0 3px 3px rgba(0,0,0,.3);
        .toolbar {
          border-bottom: none;
        }
      }
    }
  }
}

.myresearch-table.online-payment .toolbar {
  align-items: center;
  margin-bottom: 1rem;

  .checkboxFilter.mylist-select-all {
    margin-right: 1rem;
  }
}

.template-dir-holds {
  .toolbar {
    @media (max-width: @screen-xs) {
      flex-direction: column-reverse;
    }
  }
}

.template-dir-myresearch .toolbar, .template-dir-checkouts .toolbar, .template-dir-holds .toolbar {
  margin: 0;
  margin-top: 5px;
  border-bottom: 1px solid @gray-lighter;
  padding: 3px 0;
  @media(max-width: @screen-md) {
    margin-top: 0;
  }
  .status-text {
    float: right;
    line-height: 38px;
  }
  &.bottom {
    border-top: 1px solid @gray-lighter;
    border-bottom: none;
    td {
      vertical-align: middle;
      &:first-child {
        vertical-align: top;
        padding-top: 10px;
      }
      &:nth-child(2) {
        width: 100%;
      }
    }
  }
}

.online-payment-data {
  font-size: 1.2em;
  margin-bottom: 40px;
  padding-right: 8px;
  @media (min-width: @screen-sm) {
    width: 50%;
    float: right;
  }
  .amount {
    font-weight: bold;
  }
}

.online-payment-note {
  margin-bottom: 40px;
  @media (min-width: @screen-sm) {
    width: 50%;
    float: left;
  }
}

.useraccount-table {
  border: 1px solid @gray-lighter;
  &:not(.fines-table) {
    border-top: none;
  }
  box-shadow: 0 15px 30px -35px @gray;
  border-collapse: separate;
  margin-top: 10px;
  &.online-payment {
    margin-bottom: 15px;
    td {
      @media (max-width: @screen-xs-max) {
        white-space: normal !important;
      }
    }
  }
  &.library-cards {
    @media (max-width: @screen-xs-max) {
      table-layout: fixed;
    }
  }
  .headers {
    background: @gray-ultralight;
    color: @text-color;
  }
  .headers th {
    background: none;
    border-top: 1px solid #d1d1d1;
    &:last-child {
      border-right: none;
    }
  }
  td {
    border-right: 1px solid @body-bg;
    vertical-align: middle;
    &:last-child {
      border-right: none;
    }
  }
  .user-account-table-title {
    min-width: 25%;
    @media (max-width: @screen-xs-max) {
      white-space: normal !important;
      min-width: 30%;
    }
  }
  .total-balance {
    background: none;
    border-top: 2px solid @gray-lighter;
    text-align: right;
    line-height: 2em;
    font-size: 1.2em;
    .amount {
      font-weight: bold;
    }
  }
  @media screen and (min-width: 769px) {
    .balance {
      text-align: right;
    }
  }
  .online-payment-remark {
    font-weight: bold;
  }
  tr.payment-data>th {
    background: @body-bg;
  }
  th {
    font-size: 1.1em;
  }
  .history-time {
    width: 20%;
  }
  .history-save {
    text-align: center;
    width: 15%;
    a {
      color: @action-link-color;
    }
  }
  .history-results {
    width: 15%;
  }
  .actions {
    width: 15%;
  }
  .library-card-actions a {
    display: block;
    margin: 4px 0;
  }
  td.history-search-index, td.history-schedule .disable {
    color: @gray-light;
    font-size: .9em;
  }
}

.myresearch-body {
  margin-top: 15px;
  @media (max-width: @screen-sm-max) {
    margin-top: 0px;
    &.mainbody.right {
      padding-left: 0px;
    }
    .bulkActionButtons.bulk-action-buttons-col {
      padding-right: 3px;
    }
  }
}
/* ... */

